# carter

./: CMakeLists.txt  license.md  makefile  readme.md
inc/carter/: randolph.h
src/carter/: randolph-nix.c  randolph-win.c
test/: main.c
